# web_app

./: Cargo.toml  READMe.md
src/: main.rs
src/controller/: greeting_controller.rs  mod.rs  student_controller.rs
src/model/: mod.rs
