[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
aws-sdk-dynamodb = "0.8.0"
aws-config = "0.8.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

